fix: downgraded java to 17